--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -199,9 +199,9 @@ h4 {
     font-size: 20px;
     margin: 5px;
     text-transform: uppercase;
-    top: 40px;
-    position: relative;
-    right: -50px;
+    top: 90px;
+    position: absolute;
+    right:35px;
 }
 .counter {
     position: fixed;
