--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@
 * {
     box-sizing: border-box;
 }
-
+/* Styling that is universal through each screen displayed */
 body {
 	background-color: #fff;
     font-family: 'Sancreek', sans-serif;
@@ -16,17 +16,103 @@ body {
     margin: 0;
     cursor: pointer;
 }
+span {
+    text-shadow: 2px 2px 2px #CE5937;
+}
+
+/* Styling for both initial screen and the score screen */
+.popupScreen {
+    width: 100vw;
+    height: 100vh;
+    max-width: 500px;
+    max-height: 700px;
+    background-color: #edd7bd;
+    border: 10px solid #D45A4d;
+    border-radius: 5%;
+    display: flex;
+    position: absolute;
+    text-align: center;
+    opacity: 1;
+    left: 50%;
+    top: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    z-index: 3;
+}
+.visible {
+    visibility: visible;
+}
+.hiddenscore {
+    visibility: hidden;
+}
+/* Initial Screen Styling */
+.signature {
+    font-size: x-small;
+    position: absolute;
+    bottom: 0%;
+}
+.instructions {
+    height: 80px;
+    width: 80px;
+    bottom: 20px;
+    left: 40%;
+}
+.targetstart {
+    height: 80px;
+    width: 80px;
+    left: 40%;
+}
+p {
+    font-size: 24px;
+    font-family: 'Times New Roman', Times, serif;
+    width: 100%;
+    padding: 20px;
+}
+
+/* Header Background image used on all screens */
+.header {
+    width: 100%;
+    height: 110px;
+    background-image: url(../media/carnivalbackground.png) ;
+    background-position: center; 
+    background-repeat: no-repeat; 
+    background-size: contain;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+/* tstyle also being used to style the targets */
+.tstyle {
+    border-radius: 50%;
+    border: 1px solid black;
+    position: absolute;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin: auto;  
+    background-image: url(../media/targetshooting.jpeg) ;
+    background-color: white;
+    background-position: center; 
+    background-repeat: no-repeat; 
+    background-size: contain;
+    box-shadow: 2px 1px 1px 1px #000000;    
+}
+
+/* Game Screen Styling within shooting area*/
 .container {
-    width: 401px;
+    width: 371px;
     height: 300px;
+    top: 0;
     background-color: #ff0000;
     color: #f00;
     opacity: 0.8;
     background-image: linear-gradient(to right, #fff, #fff 20px, #ff0000 20px, #ff0000 );
     background-size: 40px 100%;
     cursor: crosshair;
-    z-index: 1;
-}
+    z-index: 1;}
+
 .levels {
     width: 500px;
     border: 10px solid rgb(95, 50, 20);
@@ -51,85 +137,31 @@ body {
     z-index: 2;
     bottom: 330px;
 }
-.target {
-    border-radius: 50%;
-    border: 1px solid black;
-    position: absolute;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    margin: auto;  
-    background-image: url(../media/targetshooting.jpeg) ;
-    background-color: white;
-    background-position: center; 
-    background-repeat: no-repeat; 
-    background-size: contain;
-    box-shadow: 2px 1px 1px 1px #000000;  
-}
-
-.instructions {
-    height: 80px;
-    width: 80px;
-    bottom: 20px;
-    left: 40%;
-}
-
-h1 {
-    font-size: 24px;
-}
-h3 {
-    font-size: 30px;
-    text-shadow: 2px 2px 2px #CE5937;
-}
- 
-p {
-    font-size: 24px;
-    font-family: 'Times New Roman', Times, serif;
-    font-weight: 700;
-    width: 100%;
-    padding: 20px;
-}
-
 #targetone {
     height: 80px;
     width: 80px;
     bottom: 0px;
-    left: 149px;
+    left: 134px;
     z-index: 20;
 }
 #targettwo {
     height: 60px;
     width: 60px;
     bottom: 110px;
-    left: 159px;
+    left: 144px;
     z-index: 15;
 }
 #targetthree {
     height: 40px;
     width: 40px;
     bottom: 200px;
-    left: 169px;
+    left: 154px;
     z-index: 10;
 }
 #targetone.active, #targettwo.active, #targetthree.active{
     transition: height 0.1s ease;
     height: 2px;
 }
-
-.active {
-    transition: all 1000ms ease-in-out;
-}
-h2 {
-    font-family: 'Sancreek', cursive;
-	font-size: 65px;
-    
-}
-h2.hit {
-    font-size: 70px;
-    transition: all 0.1s ease-in-out;
-}
-
 .centertarget {
     height: 21%;
     width: 21%;
@@ -138,62 +170,43 @@ h2.hit {
     position: absolute;
     z-index: 10;
 }
-h2#score {
-    margin: 30px 0 10px;
+/* Starts the target change */
+.active {
+    transition: all 1000ms ease-in-out;
 }
-#score {
+
+/* Game Screen styling above shooting area */
+h1 {
+    font-size: 24px;
+}
+
+h2 {
+    font-family: 'Sancreek', cursive;
+	font-size: 65px;    
+}
+h2.hit {
+    font-size: 70px;
+    transition: all 0.1s ease-in-out;
+}
+h2#score {
+    margin: 20px 0 10px;
+    left: 10px;
+}
+h2#perfectScore {
+    margin: 20px 0 10px;
+    position: relative;
+    left: -90px;
+}
+h3 {
+    font-size: 30px;
+    text-shadow: 2px 2px 2px #CE5937;
+}
+#score #perfectScore {
     height: 100px;
     width: 100px;
     text-align: center;
     text-shadow: 2px 2px 2px #CE5937;
 }
-#flexbox {
-    top: 50px;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-}
-span {
-    text-shadow: 2px 2px 2px #CE5937;
-}
-
-.popupScreen {
-    width: 100vw;
-    height: 100vh;
-    max-width: 500px;
-    max-height: 700px;
-    background-color: #edd7bd;
-    border: 10px solid #D45A4d;
-    border-radius: 5%;
-    display: flex;
-    position: absolute;
-    text-align: center;
-    opacity: 1;
-    left: 50%;
-    top: 50%;
-    transform: translateX(-50%) translateY(-50%);
-    z-index: 3;
-}
-#scorescreen { 
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-} 
-
-.hiddenscore {
-    visibility: hidden;
-}
-
-.visible {
-    visibility: visible;
-}
- 
-#gameScore {
-    font-size: 40px;
-    color: red;
-    text-shadow: 2px 2px 2px rgb(0, 0, 0);
-}
-
 h4 {
     font-family: 'Sancreek', cursive;
     font-size: 20px;
@@ -202,6 +215,12 @@ h4 {
     top: 90px;
     position: absolute;
     right:35px;
+}
+#flexbox {
+    top: 50px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 .counter {
     position: fixed;
@@ -212,7 +231,6 @@ h4 {
     transform: scale(0);
     animation: hide 0.2s ease-out;
 }
-
 @keyframes hide {
     0% {
         transform: scale(1);
@@ -225,8 +243,7 @@ h4 {
     position: relative;
     transform: scale(0);
     text-align: center;
-}
-  
+} 
 .final.show {
     transform: scale(1);
     animation: show 0.2s ease-out;
@@ -290,7 +307,18 @@ h4 {
     100% {
     transform: translate(-50%, -50%) rotate(-200deg);
     }
-}  
+} 
+/* Score screen styling */ 
+#scorescreen { 
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+} 
+#gameScore {
+    font-size: 40px;
+    color: red;
+    text-shadow: 2px 2px 2px rgb(0, 0, 0);
+}
 #replay {
     background-color: #3498db;
     border-radius: 3px;
@@ -321,8 +349,7 @@ h4 {
     right: 0;
 }
 
-/*---Red bullet fire--*/
-
+/*---Bullet hole fire--*/
 .container .circle {
     position: absolute;
     background-color: rgb(58, 58, 58);
@@ -333,7 +360,6 @@ h4 {
     animation: scale 0.8s ease-out;
     cursor:crosshair;
 }
-
 span.circle {
     position: absolute;
     background-color: rgb(58, 58, 58);
@@ -344,60 +370,9 @@ span.circle {
     animation: scale 0.8s ease-out;
     cursor:crosshair;
 }
-
 @keyframes scale {
     to {
         transform: translate(-50%, -50%) scale(0);
         opacity: 0.5;
     }
-}
-
-.header {
-    width: 390px;
-    height: 150px;
-    background-image: url(../media/carnivalbackground.png) ;
-    background-position: center; 
-    background-repeat: no-repeat; 
-    background-size: contain;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-.headerfront {
-    height: 150px;
-    background-image: url(../media/carnivalbackground.png) ;
-    background-position: center; 
-    background-repeat: no-repeat; 
-    background-size: contain;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-.targetstart {
-    height: 80px;
-    width: 80px;
-    left: 40%;
-    border-radius: 50%;
-    border: 1px solid black;
-    position: absolute;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    margin: auto;  
-    background-image: url(../media/targetshooting.jpeg) ;
-    background-color: white;
-    background-position: center; 
-    background-repeat: no-repeat; 
-    background-size: contain;
-    box-shadow: 2px 1px 1px 1px #000000;  
-}
-
-.signature {
-    font-size: x-small;
-    position: absolute;
-    bottom: 0%;
 }
