--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,13 +67,14 @@ p {
     font-size: 24px;
     font-family: 'Times New Roman', Times, serif;
     width: 100%;
-    padding: 0px;
+    margin: 20px 0px;
 }
 
 /* Header Background image used on all screens */
 .header {
     width: 100%;
     height: 110px;
+    min-width: 360px;
     background-image: url(../media/carnivalbackground.png) ;
     background-position: center; 
     background-repeat: no-repeat; 
