--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -333,10 +333,10 @@ h4 {
     text-shadow: 2px 2px 2px rgb(0, 0, 0);
 }
 button {
-    background-color: rgb(0, 17, 255);
+    background-color: #940000;
     border-radius: 3px;
     border: none;
-    color: aliceblue;
+    color: #fff;
     padding: 5px;
     text-align: center;
     display: inline-block;
