--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 90vh;
+    height: 100vh;
     margin: 0 ;
     overflow: hidden;
     cursor: pointer;
@@ -193,27 +193,63 @@ h2.hit {
 h2#score {
     margin: 20px 0 15px;
     position: relative;
-    left: -100px;
+    left: -20px;
     text-shadow:  2px 2px 2px maroon;
     width: 120px;
 }
 h2#perfectScore {
-    margin: 20px 0 10px;
+    margin: 15px 0 10px;
     position: relative;
-    left: 0px;
+    left: 90px;
     font-size: 55px;
     color: #f00;
     width: 60px;
 }
+h2#shotTallyCurrent {
+    margin: 20px 0px 0px;
+    position: relative;
+    left: -30px;
+    font-size: 30px;
+    color: #f00;
+    width: 30px;
+    z-index: 3;
+    text-align: center;
+}
+p.shotsTaken {
+    font-size: 12px;
+    height: 20px;
+    font-family: 'Sancreek', cursive;
+    margin: 0px;
+    left: -60px;
+    top: 55px;
+    position: relative;
+    z-index: 3;
+    width: 30px;
+    line-height: 13px;
+    text-align: center;
+}
+
 p.perfect {
     font-size: 18px;
     height: 20px;
     font-family: 'Sancreek', cursive;
     margin: 0px;
     position: relative;
-    left: -70px;
+    left: 20px;
     top: 97px;
     z-index: 3;
+    width: 130px;
+}
+
+p.timeRemaining {
+    font-size: 12px;
+    height: 20px;
+    font-family: 'Sancreek', cursive;
+    margin: 0px;
+    position: relative;
+    left: -50px;
+    top: 20px;
+    width: 130px;
 }
 h3 {
     font-size: 30px;
@@ -226,7 +262,7 @@ h4 {
     text-transform: uppercase;
     top: 90px;
     position: absolute;
-    left: 220px;
+    left: 320px;
 }
 #flexbox {
     top: 50px;
@@ -278,8 +314,8 @@ h4 {
     overflow: hidden;
     width: 250px;
     height: 50px;
-    top: 35px;
-    left: 150px;
+    top: 45px;
+    left: 240px;
 } 
 .nums span {
     position: absolute;
