--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,7 +74,7 @@ p {
     width: 100%;
     height: 110px;
     min-width: 360px;
-    background-image: url(../media/carnivalbackground.png) ;
+    background-image: url(../media/carnivalbackground.webp) ;
     background-position: center; 
     background-repeat: no-repeat; 
     background-size: contain;
@@ -94,7 +94,7 @@ p {
     align-items: center;
     justify-content: center;
     margin: auto;  
-    background-image: url(../media/targetshooting.jpeg) ;
+    background-image: url(../media/targetshooting.webp) ;
     background-color: white;
     background-position: center; 
     background-repeat: no-repeat; 
