--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,6 +74,7 @@ p {
     width: 100%;
     height: 110px;
     min-width: 360px;
+    max-width: 500px;
     background-image: url(../media/carnivalbackground.webp) ;
     background-position: center; 
     background-repeat: no-repeat; 
@@ -82,6 +83,7 @@ p {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    position: relative;
 }
 
 /* tstyle also being used to style the targets */
@@ -419,4 +421,11 @@ span.circle {
 
 main {
     display: contents;
+}
+
+#sound {
+    font-size: 20px;
+    position: absolute;
+    right: 10px;
+    top: 10px;
 }
