--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -257,7 +257,7 @@ h3 {
     font-size: 30px;
     text-shadow: 2px 2px 2px #CE5937;
 }
-h4 {
+.shoot {
     font-family: 'Sancreek', cursive;
     font-size: 20px;
     margin: 5px;
